# MCP_PlayWright

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: lint.yml
agent_browser/: .gitignore  conftest.py  main.py  pyproject.toml
agent_browser/agent/: __init__.py  browser.py  prompts.py  runner.py  tools.py  writer.py
agent_browser/utils/: config.py
auditoria-tests/: README.md
