[project]
name = "mcp-playwright"
version = "0.1.0"
description = "AI-powered Playwright test generator — describe a user flow in plain text and get Page Object Model + pytest files"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["playwright", "testing", "llm", "ai", "automation", "page-object-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []
