[project]
name = "mcp-playwright"
version = "0.1.0"
description = "AI-powered Playwright test generator — describe a user flow in plain text and get Page Object Model + pytest files"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.scripts]
mcp-playwright = "main:main"
